# le-carnet

./: .gitignore  Makefile  README.md  generate.py  hugging_face.py  main.py  mistral.py  pyproject.toml  requirements.txt  save_backup.py  translate.py
data/: stories_mistral-small-2501_20250516-210218.jsonl  stories_mistral-small-2501_20250516-220902.jsonl  stories_mistral-small-2501_20250517-145826.jsonl
src/data/: mistral.py  openai.py  push_dataset.py  push_to_hf.py  translate.py
src/data/vocabulary/: adjectives.txt  features.txt  nouns.txt  verbs.txt
src/eval/: eval.py  llm_as_a_judge.py  test-00000-of-00001.parquet
src/inference/: bma.py  inference.py  profile_bma.py
src/train/: config.py  configs.py  distill.py  model_config.py  push_model.py  train.py  train_config.py  utils.py
training/: config.json  train.py  train_accelerate.py
vocabulary/: adjectives.txt  features.txt  nouns.txt  verbs.txt
