[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "LeCarnet"
version = "0.1.0"
description = "LeCarnet is a corpus of simple French stories, featuring end‑to‑end data generation and training pipelines for small language models."
authors = [
  { name = "Maxence Lasbordes"},
]
requires-python = "==3.12.*"
dependencies = [
  "transformers==4.51.3",
  "datasets==3.5.0",
  "sentencepiece==0.2.0",
  "sacremoses==0.1.1",
  "accelerate==1.5.1",
  "mistralai==1.7.0",
  "jsonlines==4.0.0",
  "wandb==0.19.11"
]

[project.optional-dependencies]
gpu = [
  "bitsandbytes==0.45.4"
]

[tool.uv]
package = false
